# S7_cinta_transportadora

./: .gitignore  ARCHITECTURE.md  README.md  SETUP.md
chassis/chassis_designes/: 1.SLDPRT  2.SLDPRT  3.SLDPRT  4.SLDPRT  Ensamblaje1.SLDASM  PALA1.SLDPRT  Pieza1.SLDPRT  RODILLO.SLDPRT  acople derecho.SLDPRT  acople derecho.STL  acople izquierdo.SLDPRT  acople izquierdo.STL  banda.SLDPRT
chassis/chassis_planes/: Pieza1.SLDDRW
config/: mosquitto.conf
dashboard/: README.md  main.py
dashboard/data/: frutas.csv
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
docs/: 01_Descripcion_Proyecto.md  02_Requerimientos.md  03_Entregables.md  04_Consola_Portatil.md  05_Instalacion_RPi.md  06_ESP32_Motor.md  07_ESP32_Consola.md  08_AccessPoint_RPi.md  09_Vision_Artificial.md  README.md
esp32/: README.md
esp32/.metadata/: .lock_info  version.ini
esp32/01_cinta/: CMakeLists.txt  sdkconfig  simulador_vision.py
esp32/01_cinta/main/: CMakeLists.txt  config.h  esp32_cinta.c  motor.c  motor.h  mqtt_handler.c  mqtt_handler.h  servo.c  servo.h  wifi_manager.h
esp32/02_consola/: README.md  sdkconfig
esp32/console_esp32/: CMakeLists.txt
esp32/motor_controller/: CMakeLists.txt
hardware/: README.md
ml/: README.md
ml/scripts/: 05_captura_dataset.py  06_auto_etiquetar.py  07_split_por_tomate.py  08_entrenar.py  09_inferencia_3camaras.py  (+3 more)
requirements/: esp32_dependencies.txt  ml_requirements.txt  rpi_requirements.txt
rpi/: README.md  mosquitto.conf  setup_ap.sh  setup_mosquitto.sh
scripts/: simulador_vision.py
tests/: README.md
(+66 files in other folders)
